# db-comparison-app

./: angular.json  package-lock.json  package.json  pkg.txt
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  menu.rs  models.rs
src-tauri/src/database/: mod.rs  redis_db.rs  skytable_db.rs  surreal_db.rs
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
src/app/data/: chart-data-series-from-map.pipe.ts  chart-data-series.pipe.ts
src/app/db-query/: db-query.component.html  db-query.component.scss  db-query.component.spec.ts  db-query.component.ts  query-result-model.ts
src/app/db-test/: db-test.component.html  db-test.component.scss  db-test.component.spec.ts  db-test.component.ts
src/app/db-test/charts/bar-chart/: bar-chart.component.html  bar-chart.component.ts
src/app/menu/: menu-model.ts  menu.component.html  menu.component.scss  menu.component.ts
src/app/model/: chart.ts  package.ts  query.ts
src/app/services/: db-query.service.ts
