[package]
name = "ztpd-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0.60", features = ["derive"] }
serde_json = "1.0"
redis = "0.23.0"
skytable = "0.7.4"
anyhow = "1.0.71"
thiserror = "1.0.40"
surrealdb = "1.0.0-beta.9"
async-trait = "0.1.68"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
